; ModuleID = '/home/carl/AnghaBench/openssl/apps/lib/extr_bf_prefix.c_prefix_ctrl.c'
source_filename = "/home/carl/AnghaBench/openssl/apps/lib/extr_bf_prefix.c_prefix_ctrl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i32, i64, i8*)* @prefix_ctrl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @prefix_ctrl(i32* %0, i32 %1, i64 %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  store i8* %3, i8** %8, align 8
  store i64 0, i64* %9, align 8
  %11 = load i32, i32* %6, align 4
  switch i32 %11, label %33 [
    i32 128, label %12
  ]

12:                                               ; preds = %4
  %13 = load i32*, i32** %5, align 8
  %14 = call %struct.TYPE_3__* @BIO_get_data(i32* %13)
  store %struct.TYPE_3__* %14, %struct.TYPE_3__** %10, align 8
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %16 = icmp eq %struct.TYPE_3__* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %12
  br label %45

18:                                               ; preds = %12
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = load i32*, i32** %20, align 8
  %22 = call i32 @OPENSSL_free(i32* %21)
  %23 = load i8*, i8** %8, align 8
  %24 = call i32* @OPENSSL_strdup(i8* %23)
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 0
  store i32* %24, i32** %26, align 8
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 0
  %29 = load i32*, i32** %28, align 8
  %30 = icmp ne i32* %29, null
  %31 = zext i1 %30 to i32
  %32 = sext i32 %31 to i64
  store i64 %32, i64* %9, align 8
  br label %45

33:                                               ; preds = %4
  %34 = load i32*, i32** %5, align 8
  %35 = call i32* @BIO_next(i32* %34)
  %36 = icmp ne i32* %35, null
  br i1 %36, label %37, label %44

37:                                               ; preds = %33
  %38 = load i32*, i32** %5, align 8
  %39 = call i32* @BIO_next(i32* %38)
  %40 = load i32, i32* %6, align 4
  %41 = load i64, i64* %7, align 8
  %42 = load i8*, i8** %8, align 8
  %43 = call i64 @BIO_ctrl(i32* %39, i32 %40, i64 %41, i8* %42)
  store i64 %43, i64* %9, align 8
  br label %44

44:                                               ; preds = %37, %33
  br label %45

45:                                               ; preds = %44, %18, %17
  %46 = load i64, i64* %9, align 8
  ret i64 %46
}

declare dso_local %struct.TYPE_3__* @BIO_get_data(i32*) #1

declare dso_local i32 @OPENSSL_free(i32*) #1

declare dso_local i32* @OPENSSL_strdup(i8*) #1

declare dso_local i32* @BIO_next(i32*) #1

declare dso_local i64 @BIO_ctrl(i32*, i32, i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
